fix: init pinia plugin on mobile

--- a/src/assets/style/base.css
+++ b/src/assets/style/base.css
@@ -192,3 +192,11 @@
 @utility pl-safe-* {
   padding-left: calc(var(--safe-left) + calc(var(--spacing, 0.25rem) * --value(integer)));
 }
+
+@utility bottom-safe {
+  bottom: var(--safe-bottom);
+}
+
+@utility bottom-safe-* {
+  bottom: calc(var(--safe-bottom) + calc(var(--spacing, 0.25rem) * --value(integer)));
+}
